feat: add state machine to `DataPlaneManager` (#3420)
* feat: add state machine to DataPlaneManager

* Trigger build

* create databases before tests